# Stockfish

./: .gitignore  CMakeLists.txt
nnue/: download_nnue.sh
src/: evaluate.cpp  evaluate.h
